2013-12-31  Ichi Kanaya  <kanaya@pineapple.cc>

	* polyphony.scm (animation->animation): copy constructor of <animation> class.

	* polyphony.scm (make-papilionidae-animation): fixed animation.
	
	* polyphony.scm (*the-animation-collection*): changed Y-offset of Squirrel to 0.

	* polypony.scm (image-prefix): changed from http://localhost/... to flie:///...

	* polyphony.scm (*the-animation-collection*): changed Y-offset of Tanuki from 200 to 0.

	* polyphony.scm (all): reformatted the code.

2013-12-30  Ichi Kanaya  <kanaya@pineapple.cc>

	* polyphony.scm (all): cloned from https://kanaya@bitbucket.org/kanaya/polyphony3

2011-09-27  Ichi Kanaya  <kanaya@pineappledesign.org>

	* polpyhony.scm (<animation>): jump-offset slot added.

	* polpyhony.scm (*the-animation-collection*): baboon-wee offset adjusted.

	* polyphony.scm (*the-animation-collection*): baboon-weeing added. forks to baboon-wee in 0 second. forked from baboon.

	* polyphony.scm (*the-animation-collection*): baboon modified.

2011-09-26  Ichi Kanaya  <kanaya@pineappledesign.org>

	* polyphony.scm (rende-content): alpha tag.

	* polyphony.scm (<animation>): alpha slot.

	* polyphony.scm (all): relocated from polyphony-server.scm.

	* polyphony-server.scm (render-content): ambient sound tag added.

	* polpyhony-server.scm (render-content): now takes ?person=... instead of ?event=...

2011-09-25  Ichi Kanaya  <kanaya@pineappledesign.org>

	* polyphony-server.scm (all): many refactorings.

	* polyphony-server.scm (<animation>): event-only slot added.

	* polyphony-server.scm (*the-sound-collection*): removed all extensions.

	* polyphony-server.scm (render-content): renders sound tag. Now the top level is <xml> tag.

	* polyphony-server.scm (top level): sound list added.

	* polyphony-server.scm (render-content): sound tag enabled.

	* polyphony-server.scm (all): sound effect.

	* polyphony-server.scm (render-content): depth tag.

	* polyphony-server.scm (<animation>): depth slot.
